# mini-compiler

./: .gitignore  .zipignore  CHANGELOG.md  Makefile  deque.c  deque.h  func.c  lefthook.yml  lexer.c  lexer.h  parse_tree.c  parse_tree.h  parser.c  parser.h  slog.c  slog.h  symbol_table.c  symbol_table.h
.github/workflows/: ci.yml  fuzz.yml  safety.yml
compiler-testsuite/: Cargo.toml
compiler-testsuite/crates/compiler-test/: Cargo.toml
compiler-testsuite/crates/compiler-test/snapshots/lexer/: input
compiler-testsuite/crates/compiler-test/snapshots/lexer/output/: example_1.snap  snap@example_1.snap  snap@example_1_compact.snap  snap@example_2.snap  snap@example_3.snap  snap@example_4.snap  snap@example_5.snap
compiler-testsuite/crates/compiler-test/src/: lexer.rs  lexer_fuzz.rs  lib.rs
compiler-testsuite/crates/mini-compiler-rs/: Cargo.toml  build.rs  mini_compiler.h
compiler-testsuite/crates/mini-compiler-rs/src/: lexer.rs  token.rs
compiler-testsuite/crates/testsuite/src/: macros.rs
compiler-testsuite/crates/testsuite/src/unittest/: tester.rs
fuzz/: parser_fuzz.c
mini-compiler-rs/: Cargo.toml  build.rs  mini_compiler.h
mini-compiler-rs/src/: lexer.rs  lib.rs  token.rs
snapshots/input/: example-1  example-3  example-4  example_1_compact  example_2  example_5
snapshots/parser/: fail_05  fail_fuzz_01  fail_fuzz_02  fail_fuzz_03  fail_fuzz_04  fail_fuzz_05  pass_05  pass_fuzz_01  pass_fuzz_02  pass_fuzz_03  pass_fuzz_04  pass_fuzz_05  pass_fuzz_06  pass_fuzz_07  pass_fuzz_08  pass_fuzz_09  pass_fuzz_10
table/: SLR.csv  SLR.py  grammar.bnf
tests/: dfa_test.c  lexer_test.c  parser_test.c  slr_test.c  symbol_table_test.c
