[workspace]
members = ["crates/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
mini-compiler-rs = { path = "crates/mini-compiler-rs" }
compiler-test = { path = "crates/compiler-test" }
testsuite = { version = "0.1.0", path = "crates/testsuite" }
testsuite_macros = { version = "0.1.0", path = "crates/testsuite_macros" }
insta = { version = "1.33.0", features = ["glob"] }
