[package]
name = "compiler-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mini-compiler-rs = { workspace = true }
insta = { workspace = true, features = ["glob"] }
testsuite = { path = "../testsuite" }
testsuite_macros = { path = "../testsuite_macros" }
regex_generate = "0.2.3"
rand = "0.8.5"

[[bin]]
name = "fuzzy-tokens"
path = "bin/fuzzy-tokens.rs"