[package]
name = "mini-compiler-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[build-dependencies]
bindgen = "0.68.1"
cc = { version = "1.0.43", features = ['parallel'] }
pkg-config = "0.3.15"
